Catch stable up to upstream master
Squash the sliced forge-sync run into stable.